# shooter-project

./: CMakeLists.txt
ShooterProject/: CMakeLists.txt
ShooterProject/ext/glad/include/glad/: glad.h
ShooterProject/ext/glad/src/: glad.c
ShooterProject/ext/stb/include/: stb_image.h
ShooterProject/shaders/: color.fs.glsl  color.vs.glsl  lit_color.fs.glsl  lit_color.vs.glsl  texture.fs.glsl  texture.vs.glsl
ShooterProject/src/: ShooterProject.cpp  ShooterProject.hpp  common.cpp  common.hpp  effect.cpp  effect.hpp  shader.cpp  shader.hpp  texture.cpp  world.cpp  world.hpp
ShooterProject/src/entities/: bullet.cpp  bullet.hpp  collidable.cpp  collidable.hpp  color_entity.cpp  color_entity.hpp  player.cpp  player.hpp  renderable.cpp  renderable.hpp  texture_entity.cpp  texture_entity.hpp  wall.cpp  wall.hpp
ShooterProject/src/utils/: camera.cpp  camera.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
